--- a/style.css
+++ b/style.css
@@ -1,7 +1,112 @@
-#menu
-{
-	position: fixed;
-	width: 100%;
-	height: 35px;
-	background: white;
+@import url('https://fonts.googleapis.com/css?family=Montserrat:500&display=swap');
+
+body {
+	box-sizing: border-box;
+	margin: 0;
+	padding: 0;
+	background-color: #222222;
+}
+
+li, a, button {
+	font-family: 'Montserrat', sans-serif;
+	font-weight: 500;
+	font-size: 14px;
+	color: #eeeeee;
+	text-decoration: none;
+}
+
+header {
+	position: sticky;
+	top: 0;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	padding: 10px 10%;
+	background-color: #333333;
+}
+
+.logo {
+	cursor: pointer;
+}
+
+.nav_links {
+	list-style: none;
+}
+
+.nav_links li {
+	display: inline-block;
+	padding: 0px 20px;
+}
+
+.nav_links li a {
+	transition: all 0.3s ease 0s;
+}
+
+.nav_links li a:hover {
+	color: #3577f0;
+}
+
+button {
+	padding: 9px 25px;
+	background-color: rgba(0, 136, 169, 1);
+	border: none;
+	border-radius: 50px;
+	cursor: pointer;
+	transition: all 0.3s ease 0s;
+}
+
+button:hover {
+	background-color: rgba(0, 136, 169, 0.6);
+}
+
+
+.sec_title {
+	font-family: 'Montserrat', sans-serif;
+	font-weight: 500;
+	font-size: 45px;
+	color: #eeeeee;
+	text-align: center;
+	text-decoration: underline;
+}
+
+.sec_content {
+	font-family: 'Montserrat', sans-serif;
+	font-weight: 500;
+	font-size: 16px;
+	color: #eeeeee;
+	text-align: center;
+	margin-bottom: 5%;
+
+	margin-left: 20%;
+	margin-right: 20%;
+	
+}
+
+.gallery {
+	display: flex;
+	flex-wrap: wrap;
+	flex-direction: row;
+	align-items: center;
+	justify-content: center;
+
+	margin-left: 10%;
+	margin-right: 10%;
+}
+
+.gallery img {
+	padding: 10px;
+
+	width: 400px;
+	height: 320px;
+}
+
+.gallery img:hover {
+	opacity: 0.5;
+	transition: 0.2s;
+}
+
+.fb-like {
+	background-color: azure;
+	border-radius: 10px;
+	padding: 10px;
 }
